--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,127 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Mulish', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+    text-decoration: none !important;
+    font-size: 18px;
+    margin: 0 15px;
 }
+
+.activeMenu {
+    font-weight: 700;
+    color: #07A6D2 !important;
+    border-bottom: 2px solid #07A6D2;
+}
+
+.logoName {
+    color: #ddd;
+    margin-left: 5px;
+}
+
+#heroBanner {
+    overflow: hidden;
+    height: 100vh;
+}
+
+#heroBanner a.btn.btn-outline-primary.btn-lg {
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+
+#heroBanner .animated {
+    animation: up-down 2s ease-in-out infinite alternate-reverse both;
+    -webkit-animation: up-down 2s ease-in-out infinite alternate-reverse both;
+}
+
+@keyframes up-down {
+    0% {
+        transform: translateY(10px);
+        -webkit-transform: translateY(10px);
+        -moz-transform: translateY(10px);
+        -ms-transform: translateY(10px);
+        -o-transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+    }
+}
+
+@-webkit-keyframes up-down {
+    0% {
+        transform: translateY(10px);
+        -webkit-transform: translateY(10px);
+        -moz-transform: translateY(10px);
+        -ms-transform: translateY(10px);
+        -o-transform: translateY(10px);
+    }
+    100% {
+        transform: translateY(-10px);
+        -webkit-transform: translateY(-10px);
+        -moz-transform: translateY(-10px);
+        -ms-transform: translateY(-10px);
+        -o-transform: translateY(-10px);
+    }
+}
+
+#service {
+    overflow: hidden;
+}
+
+#service img {
+    height: 280px;
+}
+
+#service .btn.btn-primary {
+    border: 1px solid #07A6D2;
+    background: #05B5E5;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+}
+
+#service .btn.btn-primary:hover {
+    background: rgba(5, 180, 229, 0.808);
+}
+
+#contactUs {
+    overflow: hidden;
+}
+
+#contactUs .btn.btn-outline-primary {
+    width: 120px;
+}
+
+
+/* responsive code here start */
+
+@media (max-width: 991px) {
+    #heroBanner .text-capitalize {
+        font-size: 35px;
+    }
+}
+
+@media (max-width: 767px) {
+    #heroBanner {
+        height: 90vh;
+    }
+    p {
+        margin-top: 40px;
+    }
+}
+
+
+/* responsive code here end  */
